corrected api paths in docs
